# insight-pilot

./: .gitignore  README.md  pyproject.toml  sources.yaml.example
.claude/skills/insight-pilot/: SKILL.md  llm.yaml.example
.claude/skills/insight-pilot/scripts/: bootstrap_env.sh
.codex/skills/insight-pilot/: SKILL.md
.codex/skills/insight-pilot/scripts/: bootstrap_env.sh
src/insight_pilot/: __init__.py  __main__.py  analyze.py  cli.py  convert.py  errors.py  models.py  project.py  sources.py
src/insight_pilot/download/: __init__.py  direct.py
src/insight_pilot/output/: __init__.py  index.py  report.py
src/insight_pilot/process/: __init__.py  dedup.py  merge.py
src/insight_pilot/search/: __init__.py  arxiv.py  blog.py  devto.py  github.py  openalex.py  pubmed.py  rss.py
tests/: test_blog_detect.py  test_github.py  test_integration_smoke.py  test_pubmed.py
